--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: yunjae Kim
   number: Number
   social: here's my gitHub
   contact: Contact
