--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: yoonk1228@gmail.com
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Web Front - Web3 BlockChain Developer"
+skills: "node.JS & JavaScript Junior Developer"
 meta_author: LastName FirstName
 
 # Google webmaster tools
